--- a/src/systemd/pygitdatback-noui.service
+++ b/src/systemd/pygitdatback-noui.service
@@ -3,13 +3,14 @@ Description=PyGitDatBack No-UI Background Service
 After=network.target
 
 [Service]
-Type=Simple
+Type=oneshot
 ExecStart={{PYTHON_PATH}} {{PATH_TO_ENTRY_POINT}}
 WorkingDirectory={{PATH_TO_PROJECT}}
-User=user
-Group=user
-Restart=on-failure
-RestartSec=5
+User=1000
+Group=1000
+RemainAfterExit=yes
+StandardOutput=journal+console
+StandardError=journal+console
 
 [Install]
 WantedBy=multi-user.target
