Fix conn target issue #1
- Modified the "After" parameter and added a new "Wants" parameter to the service file in an attempt to only launch the service once it verifies online connection.
- Added "ExecStartPre" parameter to wait 5 seconds before running the service once it verifies active connection.
- Set G_LOG_LEVEL to 0 to enable debug logs.

--- a/src/systemd/services/pygitdatback-noui.service
+++ b/src/systemd/services/pygitdatback-noui.service
@@ -1,9 +1,11 @@
 [Unit]
 Description=PyGitDatBack No-UI Background Service
-After=network.target
+After=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=oneshot
+ExecStartPre=/bin/sleep 5
 ExecStart={{PYTHON_PATH}} {{PATH_TO_ENTRY_POINT}}
 WorkingDirectory={{PATH_TO_PROJECT}}
 User=1000
