--- a/src/systemd/services/pygitdatback-noui.service
+++ b/src/systemd/services/pygitdatback-noui.service
@@ -5,12 +5,11 @@ Wants=network-online.target
 
 [Service]
 Type=oneshot
-ExecStartPre=/bin/bash -c 'until ping -c1 github.com >/dev/null 2>&1; do sleep 5; done'
 ExecStart={{PYTHON_PATH}} {{PATH_TO_ENTRY_POINT}}
 WorkingDirectory={{PATH_TO_PROJECT}}
 User=1000
 Group=1000
-RemainAfterExit=yes
+RemainAfterExit=no
 StandardOutput=journal+console
 StandardError=journal+console
 
